--- a/package.json
+++ b/package.json
@@ -2,17 +2,28 @@
   "name": "book-store",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "env-cmd -f .env.dev nodemon index.ts",
+    "start:prod": "env-cmd -f .env.prod nodemon index.ts",
+    "commit": "git-cz"
   },
-  "author": "",
+  "author": "Pratyaksh <pratyaksh2000@gmail.com>",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "env-cmd": "^10.1.0",
     "express": "^4.18.2",
     "mongoose": "^7.6.3",
     "nodemon": "^3.0.1"
-  }
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.15",
+    "@types/express": "^4.17.20",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.2.2"
+  },
+  "repository": "https://github.com/thegolu/book-store.git"
 }
